[workspace]
members = [
    "contracts/escrow-src",
    "contracts/escrow-dst", 
    "contracts/escrow-factory",
    "contracts/fusion-order",
    "contracts/fusion-resolver",
    "shared/escrow"
]
resolver = "2"

[workspace.dependencies]
near-sdk = "5.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
