[package]
name = "escrow-dst"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = { workspace = true }
near-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
escrow = { path = "../../shared/escrow" }

[dev-dependencies]
near-sdk = { workspace = true }