[package]
name = "escrow-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
escrow = { path = "../../shared/escrow" }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }